refactor: added div wrapper to Form.Control so that character count wouldn't overlap with textarea

--- a/FrontEnd/src/components/basics/TextArea/TextArea.module.scss
+++ b/FrontEnd/src/components/basics/TextArea/TextArea.module.scss
@@ -1,7 +1,8 @@
 .charCheck {
   position: absolute;
-  right: 0.75rem;
+  right: 0;
   bottom: 0;
+  padding-top: 100px;
   color: $primary-dark-color;
 }
 
@@ -51,4 +52,8 @@
 
 .placeHolder {
   color: $disabled-medium-emphasis-color;
+}
+
+.formControlWrapper {
+  padding-bottom: 30px;
 }
