feat: finish QuitPopUp (#126)

--- a/FrontEnd/src/components/Footer/Footer.module.scss
+++ b/FrontEnd/src/components/Footer/Footer.module.scss
@@ -1,7 +1,9 @@
 .wrapper {
-  width: 100%;
-  background-color: $primary-50-color;
-  padding: 3rem $entire-site-margin-x;
+  min-width: 100vw;
+  background-color: white;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  // $entire-site-margin-x
   margin-top: $filter-top-margin;
 
   @include bp-down('sm') {
@@ -14,35 +16,68 @@
   margin-bottom: 0.2rem;
 }
 
-.getStarted {
-  color: $primary-400-color !important;
-  text-align: left;
-}
+// .getStarted {
+//   color: $primary-400-color !important;
+//   text-align: left;
+// }
 
-.greyedOut {
+.copyRighttext {
   color: $disabled-low-emphasis-color;
-}
-
-.homehubOrange {
-  color: $primary-400-color;
-}
-
-.ellipses svg {
-  fill: $primary-100-color;
-  stroke: none;
-}
-
-.ellipses {
   @include font-type('body 5');
+  margin-top: 4rem;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
-.homehubLabel {
+.copyRight {
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-items: center;
 }
 
 .email {
   word-break: break-word;
+}
+
+.childrenText {
+  @include font-type('body 3');
+  padding-top: 0.3em;
+}
+.childrenText:hover {
+  text-decoration: underline;
+}
+
+.logoText {
+  color: $primary-300-color;
+  display: inline-block;
+  @include font-type('subtitle 5');
+  margin-right: 1em;
+}
+
+.logoTextWrap {
+  display: flex;
+  margin-top: 0.8rem;
+  margin-bottom: 3rem;
+}
+
+.titleText {
+  margin-top: 0.25rem;
+  margin-left: 0.75rem;
+  margin-bottom: 2rem;
+}
+
+.titleContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.footerIcon {
+  @include svg-fill($primary-300-color, 2rem, 2rem);
+}
+
+.linkSection {
+  margin-top: 0.8rem;
 }
 
 .childrenText {
