--- a/FrontEnd/src/components/MakeAPost/PopUps/PopUp.module.scss
+++ b/FrontEnd/src/components/MakeAPost/PopUps/PopUp.module.scss
@@ -13,6 +13,11 @@
   }
 }
 
+.quitModalWrapper {
+  backdrop-filter: blur(1.25rem);
+  z-index: 1301 !important;
+}
+
 .modal {
   padding: 1.5rem;
   padding-bottom: 2rem;
