--- a/FrontEnd/src/components/StudentHouseProfile/NameCard/NameCard.module.scss
+++ b/FrontEnd/src/components/StudentHouseProfile/NameCard/NameCard.module.scss
@@ -3,7 +3,8 @@
   border-radius: 0.5rem;
   min-height: 14.5rem;
   padding: 1.5rem;
-
+  margin-bottom: 1rem;
+  
   @include bp-up('md') {
     margin-top: 3.5rem;
   }
