feat: add Our Mission section
Include our mission text and graphic.

Include house svg in the background.

--- a/FrontEnd/src/components/Footer/Footer.module.scss
+++ b/FrontEnd/src/components/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
   background-color: white;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  margin-top: $filter-top-margin;
+  padding-top: $filter-top-margin;
 
   @include bp-down('sm') {
     padding: 3rem 0;
