--- a/FrontEnd/src/components/LandingPage/LandingPage.module.scss
+++ b/FrontEnd/src/components/LandingPage/LandingPage.module.scss
@@ -167,3 +167,65 @@ div.homePageCardRow {
     background-color: $primary-300-color;
   }
 }
+
+.ourMissonWrapper {
+  margin-top: 120px;
+  padding-left: 8vw;
+  padding-right: 8vw;
+  min-height: 700px;
+
+  .ourMissionTextCol {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0;
+
+    &Header {
+      font-weight: 600;
+      margin-bottom: 16px;
+
+      @include font-type('h3');
+    }
+
+    &Description {
+      white-space: pre-wrap;
+      margin-bottom: 48px;
+
+      @include font-type('body 1');
+    }
+
+    &Button {
+      margin: 0;
+    }
+  }
+
+  .ourMissionImage {
+    background-size: contain;
+    min-height: 700px;
+    margin-top: 100px;
+    max-width: 30rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    @include bp-down('lg') {
+      margin: 0;
+      margin-top: 1.5rem;
+      max-width: 80vw;
+    }
+  }
+}
+
+.backgroundHouse {
+  @include bp-down('md') {
+    margin-top: 100px;
+  }
+
+  @include bp-down('sm') {
+    margin-top: 50px;
+  }
+
+  @include bp-down('xs') {
+    margin-top: 0;
+  }
+}
