feat: integrate sections of LandingPage
Make the sections responsive.

--- a/FrontEnd/src/assets/scss/global/_theme.scss
+++ b/FrontEnd/src/assets/scss/global/_theme.scss
@@ -2,6 +2,15 @@
  * Setup the theme here (use variables whenever possible so they can be reused) in other files.
  */
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   font-family: $primary-font-stack;
   background-color: $background-color;
