--- a/FrontEnd/src/assets/scss/global/packages/_bootstrap.scss
+++ b/FrontEnd/src/assets/scss/global/packages/_bootstrap.scss
@@ -16,6 +16,16 @@ $sizes: (
   5: 5%,
 );
 
+$grid-breakpoints: (
+  xs: 0,
+  sm: 600px,
+  md: 900px,
+  lg: 1024px,
+  xl: 1300px,
+  xxl: 1440px,
+  xxxl: 1800px,
+);
+
 /* IMPORT BOOTSTRAP SASS HERE (which uses the overrided variables above) */
 @import '~bootstrap/scss/bootstrap';
 
