--- a/FrontEnd/src/components/Footer/Footer.module.scss
+++ b/FrontEnd/src/components/Footer/Footer.module.scss
@@ -17,18 +17,29 @@
 
 .footer {
   background-color: white;
+
+  &LogoWrapper {
+    @include bp-down('xs') {
+      width: 15rem;
+    }
+  }
+
   @include bp-down('xs') {
     padding-left: 2rem;
   }
+
   @include bp-down('sm') {
     padding-left: 2rem;
   }
+
   @include bp-down('md') {
     padding-left: 3rem;
   }
+
   @include bp-down('lg') {
     padding-left: 2rem;
   }
+
   @include bp-up('xl') {
     padding-left: 2rem;
   }
@@ -36,10 +47,15 @@
 
 .copyRighttext {
   color: $disabled-low-emphasis-color;
-  @include font-type('body 5');
   margin-top: 4rem;
   margin-bottom: 1rem;
   text-align: center;
+
+  @include font-type('body 5');
+
+  @include bp-down('xs') {
+    text-align: left;
+  }
 }
 
 .copyRight {
@@ -56,15 +72,23 @@
   @include font-type('body 3');
   padding-top: 0.3em;
 }
+
 .childrenText:hover {
   text-decoration: underline;
+}
+
+.logo {
+  @include bp-down('xs') {
+    width: 100%;
+  }
 }
 
 .logoText {
   color: $primary-300-color;
   display: inline-block;
-  @include font-type('subtitle 5');
   margin-right: 1em;
+
+  @include font-type('subtitle 5');
 }
 
 .logoTextWrap {
