--- a/FrontEnd/src/components/NavBar/NavBar.module.scss
+++ b/FrontEnd/src/components/NavBar/NavBar.module.scss
@@ -5,7 +5,9 @@
 }
 
 .logo {
-  height: 60px;
+  @include bp-down('sm') {
+    width: 100%;
+  }
 }
 
 .container {
@@ -22,4 +24,11 @@
 
 .postImgWrap {
   @include svg-fill($primary-200-color, 2.5rem, 2.5rem);
+}
+
+.imageContainer {
+  margin-right: auto;
+  @include bp-down('sm') {
+    width: 50%;
+  }
 }
