--- a/FrontEnd/src/components/LandingPage/LandingPage.module.scss
+++ b/FrontEnd/src/components/LandingPage/LandingPage.module.scss
@@ -63,15 +63,12 @@
 }
 
 div.homePageCardRow {
+  max-width: 1500px;
   width: 80vw;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 1rem;
+  margin-top: 2rem;
   justify-content: space-evenly;
-}
-
-.middleGap {
-  max-width: 60px;
 }
 
 .homePageCardCol {
@@ -157,6 +154,9 @@ div.homePageCardRow {
 .postPlace {
   position: relative;
   margin-top: 10rem;
+  max-width: 93.75rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .stepsHeading {
@@ -289,11 +289,14 @@ div.homePageCardRow {
   }
 }
 
-.ourMissonWrapper {
+div.ourMissonWrapper {
   margin-top: 5rem;
   padding-left: 8vw;
   padding-right: 8vw;
   min-height: 700px;
+  max-width: 93.75rem;
+  margin-left: auto;
+  margin-right: auto;
 
   .ourMissionTextCol {
     display: flex;
