--- a/FrontEnd/src/components/basics/TextArea/TextArea.module.scss
+++ b/FrontEnd/src/components/basics/TextArea/TextArea.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  padding-top: 100px;
+  padding-top: 6.25;
   color: $primary-dark-color;
 }
 
@@ -55,5 +55,5 @@
 }
 
 .formControlWrapper {
-  padding-bottom: 30px;
+  padding-bottom: 1.875rem;
 }
